--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #000;
-  font-size: 16px;
+  font-size: 1rem;
   color: #fff;
-  line-height: 1.6;
-  letter-spacing: 0.05rem;
+  font-weight: 500;
+  letter-spacing: -0.01rem;
+  line-height: 1.5;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -84,7 +85,7 @@ body {
   height: 3px; /* 線の太さを調整 */
   background-color: #fff;
   transition: all 0.3s ease;
-  border-radius: 1px; /* 少し角を丸くする */
+  border-radius: 1px;
 }
 
 /* レスポンシブ対応 (画面幅が768px以下の場合) */
@@ -100,7 +101,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #f8f8f8;
+    background-color: #fff;
     z-index: 20;
     flex-direction: column;
     align-items: center;
@@ -161,7 +162,7 @@ body {
 }
 
 .container {
-  height: 100vh;
+  height: auto;
   padding: 100px 40px 0 40px;
 }
 /* h1のスタイル */
@@ -181,11 +182,10 @@ h1 {
 
 /* 投稿のカード */
 .work-item {
-  background: #000;
-  /* border-radius: 10px; */
-  /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
+  background: #202020;
+  border-radius: 0.5rem;
   overflow: hidden;
-  padding: 20px 10px;
+  padding: 0.8rem;
   text-align: center;
   transition: transform 0.3s ease-in-out;
 }
@@ -198,13 +198,13 @@ h1 {
 .work-image {
   width: 100%;
   height: auto;
-  border-radius: 5px;
+  border-radius: 0.5rem;
 }
 
 /* タイトル */
 .work-title {
   font-size: 1.5rem;
-  margin: 5px 0;
+  margin: 0.5rem 0;
 }
 
 /* 説明文 */
@@ -215,17 +215,17 @@ h1 {
 /* リンクボタン */
 .work-link {
   display: inline-block;
-  margin-top: 10px;
+  margin-top: 0.5rem;
   padding: 10px 20px;
-  background: #202020;
+  background: #5d5d5d;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 2rem;
   text-decoration: none;
   transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .work-link:hover {
-  background: #505050;
+  background: #888;
   transform: scale(1.05);
 }
 
@@ -234,12 +234,12 @@ h1 {
   background-color: #000;
   padding: 20px 40px;
   text-align: center;
+  margin-top: 6rem;
 }
 
 .footer .copyright {
   color: #fff;
   font-size: 0.8rem;
-  margin-top: 0;
 }
 
 /* 🎯 レスポンシブデザイン */
