--- a/style.css
+++ b/style.css
@@ -136,14 +136,14 @@ p {
 
 /* text */
 .title-text {
-  font-size: 2.8rem;
-  font-weight: 500;
+  font-size: 6.5rem;
+  font-weight: 800;
   margin-bottom: 1rem;
 }
 
 .desc-text {
-  font-size: 1rem;
-  font-weight: 400;
+  font-size: 1.1rem;
+  font-weight: 500;
   text-align: center;
 }
 
@@ -158,10 +158,10 @@ a {
 }
 
 .fa-brands {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   color: var(--text-color);
   transition: color 0.3s;
-  margin: 1rem 1rem 2rem 1rem;
+  margin: 2rem 1.5rem 5rem 1.5rem;
 }
 
 .fa-github:hover {
@@ -173,10 +173,10 @@ a {
 }
 
 .fa-solid {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   color: var(--text-color);
   transition: color 0.3s;
-  margin: 1rem 1rem 2rem 1rem;
+  margin: 2rem 1.5rem 5rem 1.5rem;
 }
 
 .fa-envelope:hover {
@@ -187,7 +187,7 @@ a {
 /* layout */
 #works {
   display: grid;
-  gap: 1rem;
+  gap: 2rem;
   justify-content: center;
   padding: 0;
 }
@@ -197,7 +197,7 @@ a {
   background: #202020;
   border-radius: 0.5rem;
   overflow: hidden;
-  padding: 1rem;
+  padding: 1.5rem;
   text-align: center;
   transition: transform 0.3s ease-in-out;
 }
@@ -215,7 +215,7 @@ a {
 
 /* title-text */
 .work-title {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 0.5rem 0;
 }
 
@@ -227,7 +227,7 @@ a {
 /* link-btn */
 .work-link {
   display: inline-block;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   padding: 0.7rem 1.5rem;
   font-size: 1rem;
   background: #5d5d5d;
@@ -245,27 +245,27 @@ a {
 /* ====== footer ====== */
 .footer {
   background-color: var(--bg-color);
-  padding: 20px 40px;
+  padding: 6rem 0 3rem 0;
   text-align: center;
   margin-top: 6rem;
 }
 
 .footer .copyright {
   color: var(--text-color);
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   opacity: 0.7;
 }
 
 /* 🎯 ====== responsive-layout ====== */
 @media (min-width: 1024px) {
   #works {
-    grid-template-columns: repeat(4, 1fr); /* PC：4列 */
+    grid-template-columns: repeat(3, 1fr); /* PC：3列 */
   }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
   #works {
-    grid-template-columns: repeat(3, 1fr); /* タブレット：3列 */
+    grid-template-columns: repeat(2, 1fr); /* タブレット：2列 */
   }
 }
 
@@ -368,6 +368,14 @@ a {
   .content {
     width: 100%;
     margin: auto 0;
+  }
+
+  .title-text {
+    font-size: 4rem;
+  }
+
+  .desc-text {
+    font-size: 1rem;
   }
 
   #works {
