--- a/style.css
+++ b/style.css
@@ -133,7 +133,13 @@ p {
   background-image: url('orange.svg'), url('blue.svg'), url('green.svg');
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-size: 35%, 35%, 30%;
-  background-position: top 40% right 5%, top 65% left 5%, top 100% right 5%;
+  background-position: top 25rem right 5%, top 50rem left 5%, top 75rem right 5%;
+  opacity: 0;
+  transition: opacity 3.2s ease;
+}
+
+.fade-in {
+  opacity: 1;
 }
 
 .hero-content {
