ヘッダーのリンクの修正、aboutページにリンクを追加

--- a/style.css
+++ b/style.css
@@ -308,6 +308,9 @@ a {
   transform: translateY(-5px);
 }
 
+.link-text {
+  border-bottom: 1px solid var(--text-color);
+}
 /* 🎯 ====== responsive-layout ====== */
 @media (min-width: 1024px) {
   #works {
